--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <div class="destination" id="paris">
                 <h2>Paris</h2>
             </div>
+            <div class="destination" id="Floridas">
+                <h2>Florida</h2>
+            </div>
         </div>
     </div>
 
