--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
         </div>
     </div>
 
+    <canvas class="background"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
